--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Application" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Application" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
+        <item name="textColor">#000000</item>
+        <item name="metaColor">#606060</item>
+        <item name="color">#ffffff</item>
+        <item name="backgroundColor">#ffffff</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
