--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textView"
         android:background="@drawable/background_stroke"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,5 +16,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/button1"
+        android:stateListAnimator="@animator/zoom_buttom"
+        android:background="@drawable/selector_background_buttons"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Что же дельше?"
+        android:textColor="@color/black"
+        android:layout_margin="5dp"
+
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
