--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Application" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Application" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
+        <item name="textColor">#ffffff</item>
+        <item name="metaColor">#aeaeae</item>
+        <item name="backgroundColor">#222222</item>
+
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
 </resources>
