--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,84 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/background_shadow"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity2">
-    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:padding="10dp"
+    android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+
         android:background="@drawable/background_shadow"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHeight_percent="0.15">
-        <ImageView android:id="@+id/imageView1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/can_t_open_image"
-            android:src="@drawable/logo_btpit"
-            android:scaleType="centerInside"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".MainActivity2">
+        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:padding="10dp"
+            android:background="@drawable/background_shadow"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintWidth_percent="0.2"/>
-        <TextView android:id="@+id/textView1"
-            android:layout_width="wrap_content"
+            app:layout_constraintHeight_percent="0.1">
+            <ImageView android:id="@+id/imageView1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/can_t_open_image"
+                android:src="@drawable/logo_btpit"
+                android:scaleType="centerInside"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintWidth_percent="0.2"/>
+            <TextView android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:layout_marginStart="10dp"
+                android:text="@string/Sunday_June_22_1941"
+                app:layout_constraintTop_toTopOf="@+id/imageView1"
+                app:layout_constraintBottom_toTopOf="@id/textView2"
+                app:layout_constraintStart_toEndOf="@id/imageView1"/>
+            <TextView android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_height="wrap_content"
+                android:text="@string/date"
+                app:layout_constraintTop_toBottomOf="@+id/textView1"
+                app:layout_constraintBottom_toBottomOf="@id/imageView1"
+                app:layout_constraintStart_toEndOf="@id/imageView1"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView android:id="@+id/textViewPoem"
+            android:background="@drawable/background_shadow"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:layout_marginStart="10dp"
-            android:text="@string/Sunday_June_22_1941"
-            app:layout_constraintTop_toTopOf="@+id/imageView1"
-            app:layout_constraintBottom_toTopOf="@id/textView2"
-            app:layout_constraintStart_toEndOf="@id/imageView1"/>
-        <TextView android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_height="wrap_content"
-            android:text="22 июня 1941 04:01"
-            app:layout_constraintTop_toBottomOf="@+id/textView1"
-            app:layout_constraintBottom_toBottomOf="@id/imageView1"
-            app:layout_constraintStart_toEndOf="@id/imageView1"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    <TextView android:id="@+id/textViewPoem"
-        android:background="@drawable/background_shadow"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/poem"
-        android:layout_marginHorizontal="5dp"
-        android:padding="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_margin="5dp"
-        android:background="@drawable/background_shadow"
-        app:layout_constraintTop_toBottomOf="@id/textViewPoem"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHeight_percent="0.5">
-
-        <ImageButton android:id="@+id/buttonLike"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/heart_unpress"
-            android:background="#00FFFFFF"
-            android:padding="0dp"
-
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/poem"
+            android:layout_marginHorizontal="5dp"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout1"
             app:layout_constraintStart_toStartOf="parent"
-            />
-        <TextView android:id="@+id/textViewAmountLike"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="52"
-            android:layout_marginStart="-7dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/buttonLike"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/imageViewBTPIT"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/img_btpit_people"
+            android:layout_marginHorizontal="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textViewPoem" />
+        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayout2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:background="@drawable/background_shadow"
+            app:layout_constraintTop_toBottomOf="@id/imageViewBTPIT"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHeight_percent="0.5">
+
+            <ImageButton android:id="@+id/buttonLike"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/heart_unpress"
+                android:background="#00FFFFFF"
+                android:padding="0dp"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                />
+            <TextView android:id="@+id/textViewAmountLike"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="52"
+                android:layout_marginStart="-7dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/buttonLike"/>
+
+            <ImageButton android:id="@+id/buttonShare"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/share"
+                android:background="#00FFFFFF"
+                android:padding="0dp"
+                android:layout_marginStart="20dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/textViewAmountLike"
+                />
+            <TextView android:id="@+id/textViewAmountShare"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="52"
+                android:layout_marginStart="-7dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/buttonShare"/>
+
+
+            <ImageView android:id="@+id/imageViewSee"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/eye"
+                android:background="#00FFFFFF"
+                android:padding="0dp"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/textViewAmountSee"
+                />
+            <TextView android:id="@+id/textViewAmountSee"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="52"
+                android:layout_marginStart="-7dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
