--- a/app/src/main/res/values/attributes.xml
+++ b/app/src/main/res/values/attributes.xml
@@ -4,4 +4,5 @@
     <attr name="color" format="color"/>
     <attr name="textColor" format="color"/>
     <attr name="backgroundColor" format="color"/>
+    <attr name="blackDyn" format="color"/>
 </resources>
