--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="one_background">#4AFFAAAA</color>
     <color name="two_background">#BCFF4646</color>
+    <color name="transparent">#00000000</color>
+
 </resources>
