--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -90,7 +90,7 @@
             <TextView android:id="@+id/textViewAmountLike"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="52"
+                android:text="999"
                 android:layout_marginStart="-7dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -110,7 +110,7 @@
             <TextView android:id="@+id/textViewAmountShare"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="52"
+                android:text="999"
                 android:layout_marginStart="-7dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -132,8 +132,8 @@
             <TextView android:id="@+id/textViewAmountSee"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="52"
-                android:layout_marginStart="-7dp"
+                android:text="4.1K"
+                android:layout_marginEnd="10dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
