--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -28,29 +28,29 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintWidth_percent="0.2"/>
-            <TextView android:id="@+id/textView1"
+            <TextView android:id="@+id/textViewHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:layout_marginStart="10dp"
-                android:text="@string/Sunday_June_22_1941"
+                android:text="@string/header_post"
                 app:layout_constraintTop_toTopOf="@+id/imageView1"
-                app:layout_constraintBottom_toTopOf="@id/textView2"
+                app:layout_constraintBottom_toTopOf="@id/textViewDataTime"
                 app:layout_constraintStart_toEndOf="@id/imageView1"/>
-            <TextView android:id="@+id/textView2"
+            <TextView android:id="@+id/textViewDataTime"
                 android:layout_width="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_height="wrap_content"
-                android:text="@string/date"
-                app:layout_constraintTop_toBottomOf="@+id/textView1"
+                android:text="@string/dataTime_post"
+                app:layout_constraintTop_toBottomOf="@+id/textViewHeader"
                 app:layout_constraintBottom_toBottomOf="@id/imageView1"
                 app:layout_constraintStart_toEndOf="@id/imageView1"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
-        <TextView android:id="@+id/textViewPoem"
+        <TextView android:id="@+id/textViewContent"
             android:background="@drawable/background_shadow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/poem"
+            android:text="@string/content_post"
             android:layout_marginHorizontal="5dp"
             android:padding="10dp"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout1"
@@ -58,7 +58,7 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <ImageView
-            android:id="@+id/imageViewBTPIT"
+            android:id="@+id/imageViewContent"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:scaleType="centerCrop"
@@ -66,13 +66,13 @@
             android:layout_marginHorizontal="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textViewPoem" />
+            app:layout_constraintTop_toBottomOf="@id/textViewContent" />
         <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:background="@drawable/background_shadow"
-            app:layout_constraintTop_toBottomOf="@id/imageViewBTPIT"
+            app:layout_constraintTop_toBottomOf="@id/imageViewContent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHeight_percent="0.5">
 
