--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -39,6 +39,16 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewHeader"
             app:layout_constraintBottom_toBottomOf="@id/imageViewIcon"
             app:layout_constraintStart_toEndOf="@id/imageViewIcon"/>
+        <ImageButton
+            android:id="@+id/buttonMore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/more"
+            android:background="@color/transparent"
+            android:layout_margin="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <TextView android:id="@+id/textViewContent"
         android:background="@drawable/background_shadow"
