--- a/app/src/main/res/drawable/background_shadow_only_bottom.xml
+++ b/app/src/main/res/drawable/background_shadow_only_bottom.xml
@@ -4,14 +4,10 @@
     <item>
         <shape>
             <padding
-                android:bottom="1dp"
-                android:left="1dp"
-                android:right="1dp"
-                android:top="1dp" />
-
-            <solid android:color="?shadowColor1" />
-
-            <corners android:radius="3dp" />
+                android:bottom="0dp"
+                android:left="-3dp"
+                android:right="-3dp"
+                android:top="-3dp" />
         </shape>
     </item>
     <item>
@@ -22,9 +18,9 @@
                 android:right="1dp"
                 android:top="1dp" />
 
-            <solid android:color="?shadowColor2" />
+            <solid android:color="#00CCCCCC" />
 
-            <corners android:radius="3dp" />
+            <corners android:radius="0dp" />
         </shape>
     </item>
     <item>
@@ -35,9 +31,22 @@
                 android:right="1dp"
                 android:top="1dp" />
 
-            <solid android:color="?shadowColor3" />
+            <solid android:color="#10CCCCCC" />
 
-            <corners android:radius="3dp" />
+            <corners android:radius="0dp" />
+        </shape>
+    </item>
+    <item>
+        <shape>
+            <padding
+                android:bottom="1dp"
+                android:left="1dp"
+                android:right="1dp"
+                android:top="1dp" />
+
+            <solid android:color="#20CCCCCC" />
+
+            <corners android:radius="0dp" />
         </shape>
     </item>
 
@@ -46,7 +55,7 @@
         <shape>
             <solid android:color="?backgroundColor" />
 
-            <corners android:radius="3dp" />
+            <corners android:radius="0dp" />
         </shape>
     </item>
 </layer-list>
