--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:background="@drawable/background_shadow"
+        android:background="@drawable/background_shadow_only_bottom"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent">
         <ImageView android:id="@+id/imageViewIcon"
@@ -51,7 +51,6 @@
             app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <TextView android:id="@+id/textViewContent"
-        android:background="@drawable/background_shadow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/content_post"
@@ -61,22 +60,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <ImageView
-        android:id="@+id/imageViewContent"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/img_btpit_people"
-        android:layout_marginHorizontal="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewContent" />
+<!--    <ImageView-->
+<!--        android:id="@+id/imageViewContent"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="300dp"-->
+<!--        android:scaleType="centerCrop"-->
+<!--        android:src="@drawable/img_btpit_people"-->
+<!--        android:layout_marginHorizontal="10dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/textViewContent" />-->
     <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="@drawable/background_shadow"
-        app:layout_constraintTop_toBottomOf="@id/imageViewContent"
+        android:layout_marginVertical="5dp"
+        android:background="@drawable/background_shadow_only_top"
+        app:layout_constraintTop_toBottomOf="@id/textViewContent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHeight_percent="0.5">
 
@@ -86,6 +85,7 @@
             android:src="@drawable/heart_unpress"
             android:background="#00FFFFFF"
             android:padding="0dp"
+            android:stateListAnimator="@animator/zoom_buttom"
 
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -105,6 +105,7 @@
             android:layout_height="50dp"
             android:src="@drawable/share"
             android:background="#00FFFFFF"
+            android:stateListAnimator="@animator/zoom_buttom"
             android:padding="0dp"
             android:layout_marginStart="20dp"
             app:layout_constraintTop_toTopOf="parent"
