--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,7 +2,11 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Application" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
-        <item name="textColor">#ffffff</item>
+        <item name="android:textColor">#ffffff</item>
+
+        <item name="shadowColor1">#00656565</item>
+        <item name="shadowColor2">#55656565</item>
+        <item name="shadowColor3">#CC656565</item>
         <item name="metaColor">#aeaeae</item>
         <item name="backgroundColor">#222222</item>
 
