--- a/app/src/main/res/values/attributes.xml
+++ b/app/src/main/res/values/attributes.xml
@@ -2,7 +2,9 @@
 <resources>
     <attr name="metaColor" format="color"/>
     <attr name="color" format="color"/>
-    <attr name="textColor" format="color"/>
+    <attr name="shadowColor1" format="color"/>
+    <attr name="shadowColor2" format="color"/>
+    <attr name="shadowColor3" format="color"/>
     <attr name="backgroundColor" format="color"/>
     <attr name="blackDyn" format="color"/>
 </resources>
