--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,11 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Application" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <item name="textColor">#000000</item>
-        <item name="metaColor">#606060</item>
+        <item name="android:textColor">#000000</item>
+        <item name="shadowColor1">#00BBBBBB</item>
+        <item name="shadowColor2">#55BBBBBB</item>
+        <item name="shadowColor3">#CCBBBBBB</item>
+        <item name="metaColor">#000000</item>
         <item name="color">#ffffff</item>
         <item name="backgroundColor">#ffffff</item>
 
