--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -4,7 +4,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    android:background="@drawable/background_shadow"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayout1"
@@ -31,6 +30,17 @@
             app:layout_constraintTop_toTopOf="@+id/imageViewIcon"
             app:layout_constraintBottom_toTopOf="@id/textViewDataTime"
             app:layout_constraintStart_toEndOf="@id/imageViewIcon"/>
+        <EditText android:id="@+id/editTextHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:hint="Введите текст заголовка"
+            android:visibility="invisible"
+            android:layout_marginStart="10dp"
+            android:text="@string/header_post"
+            app:layout_constraintTop_toTopOf="@+id/imageViewIcon"
+            app:layout_constraintBottom_toTopOf="@id/textViewDataTime"
+            app:layout_constraintStart_toEndOf="@id/imageViewIcon"/>
         <TextView android:id="@+id/textViewDataTime"
             android:layout_width="wrap_content"
             android:layout_marginStart="10dp"
@@ -50,15 +60,31 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <TextView android:id="@+id/textViewContent"
+    <FrameLayout
+        android:id="@+id/frameContent"
         android:layout_width="match_parent"
+        android:background="@drawable/background_shadow_only_bottom"
         android:layout_height="wrap_content"
-        android:text="@string/content_post"
-        android:layout_marginHorizontal="5dp"
-        android:padding="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1">
+        <TextView android:id="@+id/textViewContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/content_post"
+            android:textSize="15sp"
+            android:layout_marginHorizontal="5dp"
+            android:padding="10dp"/>
+        <EditText android:id="@+id/editTextContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            android:textSize="15sp"
+            android:text="@string/content_post"
+            android:layout_marginHorizontal="5dp"
+            android:padding="10dp"/>
+    </FrameLayout>
+
 
 <!--    <ImageView-->
 <!--        android:id="@+id/imageViewContent"-->
@@ -70,12 +96,12 @@
 <!--        app:layout_constraintEnd_toEndOf="parent"-->
 <!--        app:layout_constraintStart_toStartOf="parent"-->
 <!--        app:layout_constraintTop_toBottomOf="@id/textViewContent" />-->
-    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayout2"
+    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayoutLikeShareSees"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="5dp"
         android:background="@drawable/background_shadow_only_top"
-        app:layout_constraintTop_toBottomOf="@id/textViewContent"
+        app:layout_constraintTop_toBottomOf="@id/frameContent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHeight_percent="0.5">
 
@@ -142,6 +168,39 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="5dp"
+        android:visibility="gone"
+        android:background="@drawable/background_shadow_only_top"
+        app:layout_constraintTop_toBottomOf="@id/constraintLayoutLikeShareSees"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHeight_percent="0.5">
+
+        <Button android:id="@+id/buttonCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/transparent"
+            android:text="Отмена"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <Button android:id="@+id/buttonSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Сохранить"
+            android:background="@color/transparent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
