--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
+    android:layout_margin="5dp"
+    android:background="@drawable/background_shadow"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayout1"
@@ -99,7 +100,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayoutLikeShareSees"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="5dp"
         android:background="@drawable/background_shadow_only_top"
         app:layout_constraintTop_toBottomOf="@id/frameContent"
         app:layout_constraintStart_toStartOf="parent"
@@ -172,7 +172,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="5dp"
         android:visibility="gone"
         android:background="@drawable/background_shadow_only_top"
         app:layout_constraintTop_toBottomOf="@id/constraintLayoutLikeShareSees"
@@ -183,6 +182,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/transparent"
+            android:layout_marginStart="10dp"
             android:text="Отмена"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -192,6 +192,7 @@
         <Button android:id="@+id/buttonSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
             android:text="Сохранить"
             android:background="@color/transparent"
             app:layout_constraintTop_toTopOf="parent"
