--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -42,11 +42,12 @@
             app:layout_constraintTop_toTopOf="@+id/imageViewIcon"
             app:layout_constraintBottom_toTopOf="@id/textViewDataTime"
             app:layout_constraintStart_toEndOf="@id/imageViewIcon"/>
-        <TextView android:id="@+id/textViewDataTime"
+        <com.google.android.material.textview.MaterialTextView android:id="@+id/textViewDataTime"
             android:layout_width="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_height="wrap_content"
             android:text="@string/dataTime_post"
+            android:shadowColor="@color/black"
             app:layout_constraintTop_toBottomOf="@+id/textViewHeader"
             app:layout_constraintBottom_toBottomOf="@id/imageViewIcon"
             app:layout_constraintStart_toEndOf="@id/imageViewIcon"/>
@@ -158,9 +159,9 @@
 
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/textViewAmountSee"
+            app:layout_constraintEnd_toStartOf="@+id/text_view_amount_views"
             />
-        <TextView android:id="@+id/textViewAmountSee"
+        <TextView android:id="@+id/text_view_amount_views"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="4.1K"
@@ -184,6 +185,7 @@
             android:background="@color/transparent"
             android:layout_marginStart="10dp"
             android:text="Отмена"
+            style="@style/button"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -193,6 +195,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
+            style="@style/button"
             android:text="Сохранить"
             android:background="@color/transparent"
             app:layout_constraintTop_toTopOf="parent"
