--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="button" parent="Base.Theme.Application">
+    <style name="button">
+        <item name="android:textColor">?blackDyn</item>
     </style>
 </resources>
