--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,14 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Application" parent="Theme.AppCompat.DayNight.NoActionBar">
+<!--    <style name="Base.Theme.Application" parent="Theme.AppCompat.DayNight.NoActionBar">-->
+    <style name="Base.Theme.Application" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="android:textColor">#000000</item>
         <item name="shadowColor1">#00BBBBBB</item>
-        <item name="shadowColor2">#55BBBBBB</item>
-        <item name="shadowColor3">#CCBBBBBB</item>
+        <item name="shadowColor2">#55AAAAAA</item>
+        <item name="shadowColor3">#CCAAAAAA</item>
         <item name="metaColor">#000000</item>
         <item name="color">#ffffff</item>
-        <item name="backgroundColor">#ffffff</item>
+        <item name="backgroundColor">#fBfBfB</item>
 
         <item name="blackDyn">#000000</item>
 
